--- a/index.html
+++ b/index.html
@@ -5,281 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flashcard HSK3 - Số lượng và Hán tự</title>
+    <link rel="manifest" href="manifest.json">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Noto+Sans+SC:wght@400;500;700&display=swap" rel="stylesheet">
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            min-height: 100vh;
-            padding: 20px;
-            position: relative;
-            overflow: hidden;
-        }
-
-        body::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: url('data:image/svg+xml,<svg width="60" height="60" viewBox="0 0 60 60" xmlns="http://www.w3.org/2000/svg"><circle cx="30" cy="30" r="1.5" fill="%23ffffff" opacity="0.1"/></svg>');
-            pointer-events: none;
-        }
-
-        .container {
-            position: relative;
-            z-index: 1;
-            max-width: 600px;
-            width: 100%;
-        }
-
-        h1 {
-            color: #ffffff;
-            font-size: clamp(1.5rem, 4vw, 2.5rem);
-            font-weight: 700;
-            text-align: center;
-            margin-bottom: 12px;
-            text-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
-            letter-spacing: -0.5px;
-        }
-
-        .subtitle {
-            color: rgba(255, 255, 255, 0.9);
-            text-align: center;
-            font-size: clamp(0.875rem, 2vw, 1rem);
-            margin-bottom: 40px;
-            font-weight: 400;
-            line-height: 1.6;
-        }
-
-        .flashcard {
-            width: 100%;
-            max-width: 450px;
-            height: 280px;
-            perspective: 1500px;
-            margin: 0 auto 30px;
-            cursor: pointer;
-        }
-
-        .card-inner {
-            position: relative;
-            width: 100%;
-            height: 100%;
-            text-align: center;
-            transition: transform 0.3s cubic-bezier(0.4, 0.2, 0.2, 1);
-            transform-style: preserve-3d;
-        }
-
-        .flashcard.flipped .card-inner {
-            transform: rotateY(180deg);
-        }
-
-        .card-front,
-        .card-back {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            backface-visibility: hidden;
-            border-radius: 20px;
-            background: linear-gradient(135deg, #ffffff 0%, #f8f9ff 100%);
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            padding: 30px;
-            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3),
-                        0 0 0 1px rgba(255, 255, 255, 0.1);
-            transition: box-shadow 0.3s ease;
-        }
-
-        .card-front {
-            font-size: 3rem;
-        }
-
-        .flashcard:hover .card-front,
-        .flashcard:hover .card-back {
-            box-shadow: 0 25px 70px rgba(0, 0, 0, 0.4),
-                        0 0 0 1px rgba(255, 255, 255, 0.2);
-        }
-
-        .card-front {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-        }
-
-        .card-front::before {
-            content: '中文';
-            position: absolute;
-            top: 20px;
-            left: 20px;
-            font-size: 0.75rem;
-            font-weight: 600;
-            color: rgba(255, 255, 255, 0.6);
-            text-transform: uppercase;
-            letter-spacing: 1px;
-        }
-
-        .card-back {
-            transform: rotateY(180deg);
-            background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);
-        }
-
-        .card-back::before {
-            content: 'Tiếng Việt';
-            position: absolute;
-            top: 20px;
-            left: 20px;
-            font-size: 0.75rem;
-            font-weight: 600;
-            color: rgba(255, 255, 255, 0.6);
-            text-transform: uppercase;
-            letter-spacing: 1px;
-        }
-
-        .card-back #card-back {
-            font-size: clamp(1rem, 3vw, 1.5rem);
-            font-weight: 500;
-            color: #ffffff;
-            font-family: 'Inter', sans-serif;
-            line-height: 1.6;
-            text-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-            max-height: 100%;
-            overflow-y: auto;
-            text-align: center;
-            padding: 10px;
-            display: flex;
-            flex-direction: column;
-            gap: 15px;
-        }
-
-        .card-section {
-            margin-bottom: 10px;
-        }
-
-        .label {
-            font-weight: 600;
-            margin-bottom: 5px;
-            color: rgba(255, 255, 255, 0.9);
-        }
-
-        .content {
-            font-weight: 500;
-            margin-bottom: 5px;
-        }
-
-        .example {
-            border-top: 1px solid rgba(255, 255, 255, 0.2);
-            padding-top: 10px;
-        }
-
-        .example-vi {
-            font-style: italic;
-            color: rgba(255, 255, 255, 0.8);
-            margin-top: 5px;
-        }
-
-        .controls {
-            display: flex;
-            gap: 15px;
-            justify-content: center;
-            flex-wrap: wrap;
-        }
-
-        button {
-            padding: 14px 32px;
-            font-size: 1rem;
-            font-weight: 600;
-            cursor: pointer;
-            background: rgba(255, 255, 255, 0.95);
-            color: #667eea;
-            border: none;
-            border-radius: 12px;
-            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
-            font-family: 'Inter', sans-serif;
-            position: relative;
-            overflow: hidden;
-        }
-
-        button::before {
-            content: '';
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            width: 0;
-            height: 0;
-            border-radius: 50%;
-            background: rgba(102, 126, 234, 0.1);
-            transform: translate(-50%, -50%);
-            transition: width 0.6s, height 0.6s;
-        }
-
-        button:hover::before {
-            width: 300px;
-            height: 300px;
-        }
-
-        button:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 6px 25px rgba(0, 0, 0, 0.3);
-            background: rgba(255, 255, 255, 1);
-        }
-
-        button:active {
-            transform: translateY(0);
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
-        }
-
-        #next-button {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            color: white;
-        }
-
-        #next-button:hover {
-            background: linear-gradient(135deg, #5568d3 0%, #6a3f8f 100%);
-        }
-
-        @media (max-width: 480px) {
-            .flashcard {
-                height: 240px;
-            }
-
-            button {
-                padding: 12px 24px;
-                font-size: 0.9rem;
-            }
-        }
-
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-                transform: translateY(20px);
-            }
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        .container {
-            animation: fadeIn 0.6s ease-out;
-        }
-    </style>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Noto+Sans+SC:wght@400;500;700&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+
+
     <div class="container">
         <h1>Flashcard HSK3 🇨🇳</h1>
         <p class="subtitle">Học Số Lượng và Hán Tự - Giao tiếp hàng ngày<br>Click vào thẻ để lật</p>
@@ -304,63 +41,58 @@
             <button id="next-button">Tiếp theo →</button>
         </div>
     </div>
-
     <script src="flashcard.js"></script>
     <script>
-        // Danh sách từ vựng (mảng dữ liệu)
-
-        let currentIndex = 0; // Chỉ số flashcard hiện tại
-        let previousIndex = -1; // Lưu chỉ số trước đó để tránh lặp lại
-
-        function getRandomIndex() {
-            let newIndex;
-            do {
-                newIndex = Math.floor(Math.random() * flashcards.length);
-            } while (newIndex === previousIndex && flashcards.length > 1);
-            previousIndex = newIndex;
-            return newIndex;
+        if ('serviceWorker' in navigator) {
+            window.addEventListener('load', () => {
+                navigator.serviceWorker.register('/sw.js')
+                    .then(registration => {
+                        console.log('Service Worker registered with scope:', registration.scope);
+                    })
+                    .catch(error => {
+                        console.error('Service Worker registration failed:', error);
+                    });
+            });
         }
 
-        function updateFlashcard() {
-            const card = flashcards[currentIndex];
-            document.getElementById('card-front').innerHTML = card.chinese;  // Mặt trước: Hán tự
-            document.getElementById('card-back').innerHTML = `
-                <div class="card-section">
-                    <div class="label">Phiên âm:</div>
-                    <div class="content">${card.pinyin}</div>
-                </div>
-                <div class="card-section">
-                    <div class="label">Nghĩa:</div>
-                    <div class="content">${card.vietnamese}</div>
-                </div>
-                <div class="card-section example">
-                    <div class="label">Ví dụ:</div>
-                    <div class="content">${card.example}</div>
-                    <div class="example-vi">${card.example_vi}</div>
-                </div>
-            `;  // Redesigned back content with better structure
-        }
+        let deferredPrompt;
+        const installButton = document.getElementById('installButton');
 
-        // Khởi tạo flashcard đầu tiên (random)
-        currentIndex = getRandomIndex();
-        updateFlashcard();
-
-        // Xử lý lật thẻ
-        document.getElementById('flip-button').addEventListener('click', function () {
-            document.getElementById('flashcard-container').classList.toggle('flipped');
+        window.addEventListener('beforeinstallprompt', (e) => {
+            // Prevent the default mini-infobar from appearing on mobile
+            e.preventDefault();
+            // Store the event for later use
+            deferredPrompt = e;
+            // Show the install button
+            installButton.style.display = 'block';
         });
 
-        document.getElementById('card-inner').addEventListener('click', function () {
-            document.getElementById('flashcard-container').classList.toggle('flipped');
+        installButton.addEventListener('click', () => {
+            if (deferredPrompt) {
+                // Show the install prompt
+                deferredPrompt.prompt();
+                // Wait for the user to respond to the prompt
+                deferredPrompt.userChoice.then((choiceResult) => {
+                    if (choiceResult.outcome === 'accepted') {
+                        console.log('User accepted the install prompt');
+                    } else {
+                        console.log('User dismissed the install prompt');
+                    }
+                    // Clear the deferred prompt
+                    deferredPrompt = null;
+                    // Hide the install button
+                    installButton.style.display = 'none';
+                });
+            }
         });
 
-        // Xử lý nút "Tiếp theo" - chọn ngẫu nhiên
-        document.getElementById('next-button').addEventListener('click', function () {
-            currentIndex = getRandomIndex();  // Chọn flashcard ngẫu nhiên
-            document.getElementById('flashcard-container').classList.remove('flipped');  // Reset lật thẻ
-            updateFlashcard();
+        // Detect when the app is installed
+        window.addEventListener('appinstalled', () => {
+            console.log('PWA was installed');
+            installButton.style.display = 'none';
         });
     </script>
+
 </body>
 
 </html>
