--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
     <script>
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', () => {
-                navigator.serviceWorker.register('/sw.js')
+                navigator.serviceWorker.register('/flashcard/sw.js', {
+                    scope: '/flashcard/'
+                })
                     .then(registration => {
                         console.log('Service Worker registered with scope:', registration.scope);
                     })
