--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
             <div class="logo">
                 <i class="fas fa-layer-group"></i>
                 <span>Flashcard HSK</span>
+                <span class="current-level" id="current-level">HSK 3</span>
             </div>
             <div class="header-stats">
                 <div class="stat-item">
@@ -101,7 +102,6 @@
     <!-- Offline Status Indicator -->
     <div id="offline-indicator" class="offline-indicator">
         <i class="fas fa-wifi-slash"></i>
-        <span>You're offline - Flashcard data is available locally</span>
     </div>
 
     <!-- Progress Bar -->
