deploy: a7e474b60aad7b3dea5a1555ec80f0845f2c3b18

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
     <link rel="apple-touch-icon" href="./apple-touch-icon.png">
     
     <title>Flashcard HSK - Learn Chinese</title>
-  <script type="module" crossorigin src="/flashcard/assets/js/index-DpdXkC0D.js"></script>
-  <link rel="modulepreload" crossorigin href="/flashcard/assets/js/utils-BjWo4KX3.js">
+  <script type="module" crossorigin src="/flashcard/assets/js/index-DlruSi9_.js"></script>
+  <link rel="modulepreload" crossorigin href="/flashcard/assets/js/utils-DlADByrV.js">
   <link rel="modulepreload" crossorigin href="/flashcard/assets/js/vendor-BhyxaAfg.js">
   <link rel="modulepreload" crossorigin href="/flashcard/assets/js/antd-DRSRCzUC.js">
   <link rel="stylesheet" crossorigin href="/flashcard/assets/css/index-IOQNpw8-.css">
@@ -57,6 +57,7 @@
             <div class="logo">
                 <i class="fas fa-layer-group"></i>
                 <span>Flashcard HSK</span>
+                <span class="current-level" id="current-level">HSK 3</span>
             </div>
             <div class="header-stats">
                 <div class="stat-item">
@@ -106,7 +107,6 @@
     <!-- Offline Status Indicator -->
     <div id="offline-indicator" class="offline-indicator">
         <i class="fas fa-wifi-slash"></i>
-        <span>You're offline - Flashcard data is available locally</span>
     </div>
 
     <!-- Progress Bar -->
